gateway/xlb-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: xlb-gateway
  namespace: istio-system
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: edge-http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
  - name: edge-https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          group: ""
          name: httpbin-credential
  addresses:
  - type: NamedAddress
    value: gateway-ip
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: edge-http-filter-redirect
  namespace: istio-system
spec:
  parentRefs:
  - name: xlb-gateway
    namespace: istio-system
    sectionName: edge-http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: edge2mesh 
  namespace: asm-ingress
  labels:
    gateway: xlb-gateway
spec:
  parentRefs:
  - name: xlb-gateway
    namespace: istio-system
    sectionName: edge-https
  rules:
    - backendRefs:
      - name: asm-ingressgateway
        port: 8443
---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: edge2httpbin
#   namespace: onlineboutique
# spec:
#   parentRefs:
#   - name: xlb-gateway
#     namespace: istio-system
#     sectionName: edge-https
#   hostnames: ["httpbin.example.com"]
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /status
#     - path:
#         type: PathPrefix
#         value: /delay
#     backendRefs:
#     - name: httpbin
#       port: 8000
# ---
